# tizen-nexell

./: README.md
gst-plunins-video-dec/: README.md
gst-plunins-video-dec/src/: decoder.c  decoder.h  gstnxvideodec.c  gstnxvideodec.h
nx-gst-meta/: README.md
nx-gst-meta/src/: Makefile.am  gstmmvideobuffermeta.c  gstmmvideobuffermeta.h  mm_types.h
nx-video-api/: README.md
nx-video-api/src/: Makefile.am  nx_video_alloc.c  nx_video_alloc.h  nx_video_alloc_drm.c  nx_video_api.h  nx_video_dec.c  nx_video_enc.c
nx-video-api/src/include/linux/: videodev2_nxp_media.h
